--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -81,4 +81,8 @@
         <attr name="fillColor" format="color" />
         <attr name="fillColorSecondary" format="color" />
     </declare-styleable>
+
+    <declare-styleable name="SummaryListPreference">
+        <attr name="summaryText" format="string" />
+    </declare-styleable>
 </resources>
