--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -196,6 +196,14 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="LightSettingsRatingBarStyle" parent="@*android:style/Widget.RatingBar">
+        <item name="android:maxHeight">@dimen/ratingbar_maxHeight</item>
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:indeterminateDrawable">@drawable/ratingbar_drawable</item>
+        <item name="android:progressDrawable">@drawable/ratingbar_drawable</item>
+        <item name="android:minHeight">@dimen/ratingbar_minHeight</item>
+    </style>
+
     <style name="dialog_no_title" parent="@*android:style/Theme.Dialog">
         <item name="android:windowNoTitle">true</item>
     </style>
