--- a/res/xml/device_info_status.xml
+++ b/res/xml/device_info_status.xml
@@ -18,14 +18,16 @@
         android:title="@string/device_status_activity_title">
 
     <Preference android:key="battery_status"
-        style="?android:attr/preferenceInformationStyle"
         android:title="@string/battery_status_title"
         android:summary="@string/device_info_not_available"
         android:persistent="false" />
     <Preference android:key="battery_level"
-        style="?android:attr/preferenceInformationStyle"
         android:title="@string/battery_level_title"
         android:summary="@string/device_info_not_available"
         android:persistent="false" />
+    <Preference android:key="creen_resolution"
+        android:title="@string/screen_resolution"
+        android:summary="@string/screen_resolution_value"
         android:persistent="false" />
+
 </PreferenceScreen>
