--- a/res/values-cs/arrays.xml
+++ b/res/values-cs/arrays.xml
@@ -30,13 +30,11 @@
     <item msgid="8392017019801393511">"Vše"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 sekund"</item>
-    <item msgid="8881760709354815449">"30 sekund"</item>
-    <item msgid="7589406073232279088">"1 minuta"</item>
-    <item msgid="7001195990902244174">"2 minuty"</item>
+    <item>"3 minut"</item>
     <item msgid="7489864775127957179">"5 minut"</item>
     <item msgid="2314124409517439288">"10 minut"</item>
     <item msgid="6864027152847611413">"30 minut"</item>
+    <item>Nikdy</item>
   </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"Nikdy"</item>
