--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -30,13 +30,11 @@
     <item msgid="8392017019801393511">"Alle"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 Sekunden"</item>
-    <item msgid="8881760709354815449">"30 Sekunden"</item>
-    <item msgid="7589406073232279088">"1 Minute"</item>
-    <item msgid="7001195990902244174">"2 Minuten"</item>
-    <item msgid="7489864775127957179">"5 Minuten"</item>
-    <item msgid="2314124409517439288">"10 Minuten"</item>
+    <item>"3 Minuten"</item>
+    <item msgid="7489864775127957179">"5 Minuten"</item>
+    <item msgid="2314124409517439288">"10 Minuten"</item>
     <item msgid="6864027152847611413">"30 Minuten"</item>
+    <item>Nie</item>
   </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"Nie"</item>
