--- a/res/values-es/arrays.xml
+++ b/res/values-es/arrays.xml
@@ -30,13 +30,11 @@
     <item msgid="8392017019801393511">"Todas"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 segundos"</item>
-    <item msgid="8881760709354815449">"30 segundos"</item>
-    <item msgid="7589406073232279088">"1 minuto"</item>
-    <item msgid="7001195990902244174">"2 minutos"</item>
+    <item>"3 minutos"</item>
     <item msgid="7489864775127957179">"5 minutos"</item>
     <item msgid="2314124409517439288">"10 minutos"</item>
     <item msgid="6864027152847611413">"30 minutos"</item>
+    <item>Nunca</item>
   </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"Nunca"</item>
@@ -78,6 +76,32 @@
     <item msgid="3332408460740717754">"Normal"</item>
     <item msgid="4907380534957572531">"Alto"</item>
     <item msgid="4699640516390840297">"Muy alto"</item>
+  </string-array>
+  <string-array name="power_off_timeout_entries">
+    <item>20 minutos</item>
+    <item>30 minutos</item>
+    <item>60 minutos</item>
+    <item>Nunca</item>
+  </string-array>
+  <string-array name="network_inactivity_timeout_entries">
+    <item>5 minutos</item>
+    <item>10 minutos</item>
+    <item>15 minutos</item>
+    <item>30 minutos</item>
+    <item>45 minutos</item>
+    <item>60 minutos</item>
+    <item>Nunca</item>
+  </string-array>
+  <string-array name="screen_refresh_mode_entries">
+    <item>AUTOMÁTICO</item>
+    <item>A2</item>
+  </string-array>
+  <string-array name="epd_full_timeout_entries">
+    <item>1 minuto</item>
+    <item>2 minutos</item>
+    <item>10 minutos</item>
+    <item>30 minutos</item>
+    <item>Nunca</item>
   </string-array>
   <string-array name="wifi_status">
     <item msgid="1922181315419294640"></item>
@@ -294,5 +318,54 @@
     <item msgid="7389829271787670252">"Preguntar"</item>
     <item msgid="5077768429488260031">"No permitir nunca"</item>
     <item msgid="1417929597727989746">"Permitir siempre"</item>
+  </string-array>
+  <string-array name="hdmi_resolution_entries">
+    <item>1920x1080p_50Hz</item>
+    <item>1920x1080p_60Hz</item>
+    <item>1280x720p_50Hz</item>
+    <item>1280x720p_60Hz</item>
+    <item>720x576p_50Hz</item>
+    <item>720x480p_60Hz</item>
+  </string-array>
+  <string-array name="hdmi_lcd_timeout_entries">
+    <item>10s</item>
+    <item>20s</item>
+    <item>30s</item>
+    <item>nunca dormir</item>
+  </string-array>
+  <string-array name="screenshot_delay_entries">
+    <item>15segundos más tarde</item>
+    <item>30segundos más tarde</item>
+    <item>1minuto más tarde</item>
+    <item>2minutos más tarde</item>
+    <item>3minutos más tarde</item>
+    <item>4minutos más tarde</item>
+    <item>5minutos más tarde</item>
+  </string-array>
+  <string-array name="screenshot_storage_location">
+    <item>Nand Flash</item>
+    <item>Tarjeta SD</item>
+    <item>Almacenamiento USB</item>
+  </string-array>
+  <string-array name="screenshot_strorage_location_values">
+    <item>flash</item>
+    <item>tarjeta SD</item>
+    <item>usb</item>
+  </string-array>
+  <string-array name="entries_resolution">
+    <item>Normal</item>
+    <item>HD</item>
+  </string-array>
+  <string-array name="key_map_mode">
+    <item>"Opción 1  "</item>
+    <item>"Opción 2  "</item>
+    <item>"Opción 3  "</item>
+    <item>"Opción 4  "</item>
+  </string-array>
+  <string-array name="long_short_click_key_map_mode">
+    <item>Opción 1</item>
+    <item>Opción 2</item>
+    <item>Opción 3</item>
+    <item>Opción 4</item>
   </string-array>
 </resources>
