--- a/res/values-it/arrays.xml
+++ b/res/values-it/arrays.xml
@@ -30,13 +30,11 @@
     <item msgid="8392017019801393511">"Tutte"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 secondi"</item>
-    <item msgid="8881760709354815449">"30 secondi"</item>
-    <item msgid="7589406073232279088">"1 minuto"</item>
-    <item msgid="7001195990902244174">"2 minuti"</item>
+    <item>"3 minuti"</item>
     <item msgid="7489864775127957179">"5 minuti"</item>
     <item msgid="2314124409517439288">"10 minuti"</item>
     <item msgid="6864027152847611413">"30 minuti"</item>
+    <item>Mai</item>
   </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"Mai"</item>
