--- a/res/values-ko/arrays.xml
+++ b/res/values-ko/arrays.xml
@@ -30,13 +30,11 @@
     <item msgid="8392017019801393511">"전체"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15초"</item>
-    <item msgid="8881760709354815449">"30초"</item>
-    <item msgid="7589406073232279088">"1분"</item>
-    <item msgid="7001195990902244174">"2분"</item>
+    <item>"3분"</item>
     <item msgid="7489864775127957179">"5분"</item>
     <item msgid="2314124409517439288">"10분"</item>
     <item msgid="6864027152847611413">"30분"</item>
+    <item>사용 안함</item>
   </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"사용 안함"</item>
