--- a/res/values-pt/arrays.xml
+++ b/res/values-pt/arrays.xml
@@ -30,13 +30,11 @@
     <item msgid="8392017019801393511">"Todos"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 segundos"</item>
-    <item msgid="8881760709354815449">"30 segundos"</item>
-    <item msgid="7589406073232279088">"1 minuto"</item>
-    <item msgid="7001195990902244174">"2 minutos"</item>
+    <item>"3 minutos"</item>
     <item msgid="7489864775127957179">"5 minutos"</item>
     <item msgid="2314124409517439288">"10 minutos"</item>
     <item msgid="6864027152847611413">"30 minutos"</item>
+    <item>Nunca</item>
   </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"Nunca"</item>
@@ -78,6 +76,32 @@
     <item msgid="3332408460740717754">"Normal"</item>
     <item msgid="4907380534957572531">"Alta"</item>
     <item msgid="4699640516390840297">"Muito alta"</item>
+  </string-array>
+  <string-array name="power_off_timeout_entries">
+    <item>20 minutos</item>
+    <item>30 minutos</item>
+    <item>60 minutos</item>
+    <item>Jamais</item>
+  </string-array>
+  <string-array name="network_inactivity_timeout_entries">
+    <item>5 minutos</item>
+    <item>10 minutos</item>
+    <item>15 minutos</item>
+    <item>30 minutos</item>
+    <item>45 minutos</item>
+    <item>60 minutos</item>
+    <item>Nunca</item>
+  </string-array>
+  <string-array name="screen_refresh_mode_entries">
+    <item>AUTOMÁTICO</item>
+    <item>A2</item>
+  </string-array>
+  <string-array name="epd_full_timeout_entries">
+    <item>1 minuto</item>
+    <item>2 minutos</item>
+    <item>10 minutos</item>
+    <item>30 minutos</item>
+    <item>Jamais</item>
   </string-array>
   <string-array name="wifi_status">
     <item msgid="1922181315419294640"></item>
@@ -294,5 +318,67 @@
     <item msgid="7389829271787670252">"Perguntar"</item>
     <item msgid="5077768429488260031">"Nunca permitir"</item>
     <item msgid="1417929597727989746">"Sempre permitir"</item>
+  </string-array>
+
+  <string-array name="hdmi_resolution_entries">
+    <item>1920x1080p_50Hz</item>
+    <item>1920x1080p_60Hz</item>
+    <item>1280x720p_50Hz</item>
+    <item>1280x720p_60Hz</item>
+    <item>720x576p_50Hz</item>
+    <item>720x480p_60Hz</item>
+  </string-array>
+  <string-array name="hdmi_lcd_timeout_entries">
+    <item>10s</item>
+    <item>20s</item>
+    <item>30s</item>
+    <item>nunca dormir</item>
+  </string-array>
+  <string-array name="screenshot_delay_entries">
+    <item>15segundos depois</item>
+    <item>30segundos depois</item>
+    <item>1minuto depois</item>
+    <item>2minutos depois</item>
+    <item>3minutos depois</item>
+    <item>4minutos depois</item>
+    <item>5minutos depois</item>
+  </string-array>
+  <string-array name="screenshot_storage_location">
+    <item>Nand Flash</item>
+    <item>Cartão SD</item>
+    <item>Armazenamento USB</item>
+  </string-array>
+  <string-array name="screenshot_strorage_location_values">
+    <item>flash</item>
+    <item>cartão SD</item>
+    <item>usb</item>
+  </string-array>
+  <string-array name="entries_resolution">
+    <item>Normal</item>
+    <item>HD</item>
+  </string-array>
+  <string-array name="key_map_mode">
+    <item>"Opção 1  "</item>
+    <item>"Opção 2  "</item>
+    <item>"Opção 3  "</item>
+    <item>"Opção 4  "</item>
+  </string-array>
+  <string-array name="long_short_click_key_map_mode">
+    <item>Opção 1</item>
+    <item>Opção 2</item>
+    <item>Opção 3</item>
+    <item>Opção 4</item>
+  </string-array>
+  <string-array name="key_map_summary">
+    <item>"Superior Esquerdo -> Menu \nInferior Esquerdo -> Voltar \nSuperior Direito -> Rolar para cima \nInferior Direito -> Rolar para baixo"</item>
+    <item>"Superior Esquerdo -> Menu \nInferior Esquerdo -> Voltar \nSuperior Direito -> Rolar para baixo \nInferior Direito -> Rolar para cima"</item>
+    <item>"Superior Esquerdo -> Rolar para cima \nInferior Esquerdo -> Rolar para baixo \nSuperior Direito -> Menu \nInferior Direito -> Voltar"</item>
+    <item>"Superior Esquerdo -> Rolar para baixo \nInferior Esquerdo -> Rolar para cima \nSuperior Direito -> Menu \nInferior Direito -> Voltar"</item>
+  </string-array>
+  <string-array name="long_short_click_key_map_summary">
+    <item>"Botão esquerdo (toque curto) -> Voltar \nBotão esquerdo (toque longo) -> Menu \nBotão direito (toque longo) -> Rolar para cima \nBotão direito (toque curto) -> Rolar para baixo"</item>
+    <item>"Botão esquerdo (toque curto) -> Rolar para cima \nBotão esquerdo (toque longo) -> Voltar \nBotão direito (toque longo) -> Menu \nBotão direito (toque curto) -> Rolar para baixo"</item>
+    <item>"Botão esquerdo (toque curto) -> Rolar para baixo \nBotão esquerdo (toque longo) -> Rolar para cima \nBotão direito (toque longo) -> Menu \nBotão direito (toque curto) -> Voltar"</item>
+    <item>"Botão esquerdo (toque curto) -> Rolar para baixo \nBotão esquerdo (toque longo) -> Menu \nBotão direito (toque longo) -> Voltar \nBotão direito (Toque curto) -> Rolar para cima"</item>
   </string-array>
 </resources>
