--- a/res/values-zh-rCN/arrays.xml
+++ b/res/values-zh-rCN/arrays.xml
@@ -30,13 +30,11 @@
     <item msgid="8392017019801393511">"全部"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 秒"</item>
-    <item msgid="8881760709354815449">"30 秒"</item>
-    <item msgid="7589406073232279088">"1 分钟"</item>
-    <item msgid="7001195990902244174">"2 分钟"</item>
+    <item>"3 分钟"</item>
     <item msgid="7489864775127957179">"5 分钟"</item>
     <item msgid="2314124409517439288">"10 分钟"</item>
     <item msgid="6864027152847611413">"30 分钟"</item>
+    <item>永不</item>
   </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"永不"</item>
@@ -78,6 +76,28 @@
     <item msgid="3332408460740717754">"正常"</item>
     <item msgid="4907380534957572531">"高"</item>
     <item msgid="4699640516390840297">"很高"</item>
+  </string-array>
+  <string-array name="power_off_timeout_entries">
+    <item>20 分钟</item>
+    <item>30 分钟</item>
+    <item>60 分钟</item>
+    <item>永不</item>
+  </string-array>
+  <string-array name="network_inactivity_timeout_entries">
+    <item>5 分钟</item>
+    <item>10 分钟</item>
+    <item>15 分钟</item>
+    <item>30 分钟</item>
+    <item>45 分钟</item>
+    <item>60 分钟</item>
+    <item>永不</item>
+  </string-array>
+  <string-array name="epd_full_timeout_entries">
+    <item>1 分钟</item>
+    <item>2 分钟</item>
+    <item>10 分钟</item>
+    <item>30 分钟</item>
+    <item>永不</item>
   </string-array>
   <string-array name="wifi_status">
     <item msgid="1922181315419294640"></item>
