--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -129,4 +129,15 @@
         <item name="android:windowTitleStyle">@style/WindowTitle.Custom</item>
     </style>
     
+    <style name="StartupTutorialButton">
+        <item name="android:textSize">24sp</item>
+        <item name="android:padding">10dip</item>
+    </style>
+
+    <style name="button_style">
+        <item name="android:textSize">@dimen/text_size</item>
+        <item name="android:layout_margin">@dimen/item_margin</item>
+        <item name="android:minHeight">@dimen/parent_control_button_min_height</item>
+    </style>
+
 </resources>
