--- a/res/values-it/arrays.xml
+++ b/res/values-it/arrays.xml
@@ -29,6 +29,12 @@
     <item msgid="5345178126174698955">"Pacifico"</item>
     <item msgid="8392017019801393511">"Tutte"</item>
   </string-array>
+  <string-array name="date_format_values">
+    <item>MM-dd-yyyy</item>
+    <item>MM-dd-yyyy</item>
+    <item>dd-MM-yyyy</item>
+    <item>yyyy-MM-dd</item>
+  </string-array>
   <string-array name="animations_entries">
     <item msgid="207790005475613429">"Nessuna animazione"</item>
     <item msgid="6291186755504776720">"Alcune animazioni"</item>
@@ -39,11 +45,75 @@
     <item msgid="4460915688877708508">"Vengono visualizzate alcune animazioni delle finestre"</item>
     <item msgid="488968798204105119">"Vengono visualizzate tutte le animazioni delle finestre"</item>
   </string-array>
+  <string-array name="animations_values">
+    <item>00</item>
+    <item>01</item>
+    <item>11</item>
+  </string-array>
   <string-array name="screen_timeout_entries">
     <item msgid="7589406073232279088">"1 minuto"</item>
     <item msgid="7001195990902244174">"2 minuti"</item>
     <item msgid="5721688686241190620">"10 minuti"</item>
     <item msgid="7156442995039264948">"30 minuti"</item>
+  </string-array>
+  <string-array name="screen_timeout_values">
+    <item>180000</item>
+    <item>300000</item>
+    <item>600000</item>
+    <item>1800000</item>
+    <item>-1</item>
+  </string-array>
+  <string-array name="power_off_timeout_entries">
+    <item>20 minuti</item>
+    <item>30 minuti</item>
+    <item>60 minuti</item>
+    <item>un giorno</item>
+    <item>non spegnere mai</item>
+  </string-array>
+  <string-array name="power_off_timeout_values">
+    <item>1200000</item>
+    <item>1800000</item>
+    <item>3600000</item>
+    <item>86400000</item>
+    <item>-1</item>
+  </string-array>
+  <string-array name="hdmi_resolution_entries">
+    <item>1920x1080p_50Hz</item>
+    <item>1920x1080p_60Hz</item>
+    <item>1280x720p_50Hz</item>
+    <item>1280x720p_60Hz</item>
+    <item>720x576p_50Hz_4x3</item>
+    <item>720x576p_50Hz_16x9</item>
+    <item>720x480p_60Hz_4x3</item>
+    <item>720x480p_60Hz_16x9</item>
+  </string-array>
+  <string-array name="hdmi_resolution_values">
+    <item>0</item>
+    <item>1</item>
+    <item>2</item>
+    <item>3</item>
+    <item>4</item>
+    <item>5</item>
+    <item>6</item>
+    <item>7</item>
+  </string-array>
+  <string-array name="hdmi_mode_entries">
+    <item>Schermo LCD</item>
+    <item>Schermo HDMI</item>
+    <item>Schermo LCD e HDMI</item>
+  </string-array>
+  <string-array name="hdmi_mode_values">
+    <item>0</item>
+    <item>1</item>
+    <item>2</item>
+  </string-array>
+  <string-array name="hdmi_mode2_entries">
+    <item>Display LCD</item>
+    <item>Display HDMI</item>
+  </string-array>
+  <string-array name="hdmi_mode2_values">
+    <item>0</item>
+    <item>1</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Molto lenta"</item>
@@ -52,12 +122,26 @@
     <item msgid="7553665153391107454">"Veloce"</item>
     <item msgid="2538100882620724753">"Molto veloce"</item>
   </string-array>
+  <string-array name="tts_rate_values">
+    <item>60</item>
+    <item>80</item>
+    <item>100</item>
+    <item>150</item>
+    <item>200</item>
+  </string-array>
   <string-array name="tts_pitch_entries">
     <item msgid="7526050907652687351">"Molto basso"</item>
     <item msgid="2692137425242433765">"Basso"</item>
     <item msgid="3332408460740717754">"Normale"</item>
     <item msgid="4907380534957572531">"Alto"</item>
     <item msgid="4699640516390840297">"Molto alto"</item>
+  </string-array>
+  <string-array name="tts_pitch_values">
+    <item>50</item>
+    <item>80</item>
+    <item>100</item>
+    <item>120</item>
+    <item>150</item>
   </string-array>
   <string-array name="tts_lang_entries">
     <item msgid="478030717868306353">"Inglese americano"</item>
@@ -66,6 +150,28 @@
     <item msgid="9214080387341763401">"Tedesco"</item>
     <item msgid="5972100016440094433">"Italiano"</item>
     <item msgid="5811378076054402537">"Spagnolo"</item>
+  </string-array>
+  <string-array name="tts_lang_values">
+    <item>eng-USA</item>
+    <item>eng-GBR</item>
+    <item>fra-FRA</item>
+    <item>deu-DEU</item>
+    <item>ita-ITA</item>
+    <item>spa-ESP</item>
+  </string-array>
+  <string-array name="tts_demo_strings">
+    <item>This is an example of speech synthesis in English.</item>
+    <item>This is an example of speech synthesis in English.</item>
+    <item>Voici un échantillon de synthèse vocale en français.</item>
+    <item>Dies ist ein Beispiel für Sprachsynthese in Deutsch.</item>
+    <item>Questo è un esempio di sintesi vocale in italiano.</item>
+    <item>Este es un ejemplo de síntesis de voz en español.</item>
+  </string-array>
+  <string-array name="tts_engine_entries">
+    <item>Pico TTS</item>
+  </string-array>
+  <string-array name="tts_engine_values">
+    <item>com.svox.pico</item>
   </string-array>
   <string-array name="wifi_status">
     <item msgid="1922181315419294640"></item>
@@ -97,6 +203,10 @@
     <item msgid="2966395706508338179">"WPA/WPA2 PSK"</item>
     <item msgid="9098390198768443435">"802.1x EAP"</item>
   </string-array>
+  <string-array name="wifi_ap_security">
+    <item>Aperto</item>
+    <item>WPA2 PSK</item>
+  </string-array>
   <string-array name="wifi_eap_method">
     <item msgid="1160193392455075561">"PEAP"</item>
     <item msgid="7981731051382306293">"TLS"</item>
@@ -112,6 +222,11 @@
     <item msgid="3804733751095821976">"Quando lo schermo si disattiva"</item>
     <item msgid="1549288661423279207">"Mai quando collegato"</item>
     <item msgid="1986753720941888596">"Mai"</item>
+  </string-array>
+  <string-array name="wifi_sleep_policy_values">
+    <item>0</item>
+    <item>1</item>
+    <item>2</item>
   </string-array>
   <string-array name="usage_stats_display_order_types">
     <item msgid="9077371706468756228">"Tempo di utilizzo"</item>
@@ -135,21 +250,109 @@
     <item msgid="3165868966179561687">"Avviso"</item>
     <item msgid="6038758039030476855">"Vibrazione"</item>
   </string-array>
+  <string-array name="emergency_tone_values">
+    <item>0</item>
+    <item>1</item>
+    <item>2</item>
+  </string-array>
+  <string-array name="special_locale_codes">
+    <item>zh_CN</item>
+    <item>zh_TW</item>
+  </string-array>
   <string-array name="apn_auth_entries">
     <item msgid="3856896061242872146">"Nessuno"</item>
     <item msgid="5756844015743664882">"PAP"</item>
     <item msgid="535934025797984365">"CHAP"</item>
     <item msgid="8383098660619805783">"PAP o CHAP"</item>
   </string-array>
+  <string-array name="apn_auth_values">
+    <item>0</item>
+    <item>1</item>
+    <item>2</item>
+    <item>3</item>
+  </string-array>
   <string-array name="app_install_location_entries">
     <item msgid="8151497958991952759">"Memorizzazione su dispositivo interno"</item>
     <item msgid="3738430123799803530">"Scheda SD rimovibile"</item>
     <item msgid="4498124044785815005">"Impostazione di sistema"</item>
+  </string-array>
+  <string-array name="app_install_location_values">
+    <item>dispositivo</item>
+    <item>card sd</item>
+    <item>auto</item>
   </string-array>
   <string-array name="vibrate_entries">
     <item msgid="3388952299521009213">"Sempre"</item>
     <item msgid="6293147072807231256">"Mai"</item>
     <item msgid="1276641209451816572">"Solo in mod. silenziosa"</item>
     <item msgid="8418930333779132418">"Solo se mod. silenziosa non attiva"</item>
+  </string-array>
+  <string-array name="vibrate_values">
+    <item>sempre</item>
+    <item>mai</item>
+    <item>silenzioso</item>
+    <item>nonsilenzioso</item>
+  </string-array>
+  <string-array name="epd_full_timeout_entries">
+    <item>1 minuto</item>
+    <item>2 minuti</item>
+    <item>10 minuti</item>
+    <item>30 minuti</item>
+    <item>mai</item>
+  </string-array>
+  <string-array name="epd_full_timeout_values">
+    <item>60000</item>
+    <item>120000</item>
+    <item>600000</item>
+    <item>1800000</item>
+    <item>-1</item>
+  </string-array>
+  <string-array name="key_map_mode">
+    <item>"Opzione 1  "</item>
+    <item>"Opzione 2  "</item>
+    <item>"Opzione 3  "</item>
+    <item>"Opzione 4  "</item>
+  </string-array>
+  <string-array name="new_key_map_mode">
+    <item>Opzione 1</item>
+    <item>Opzione 2</item>
+    <item>Opzione 3</item>
+    <item>Opzione 4</item>
+    <item>Opzione 5</item>
+    <item>Opzione 6</item>
+    <item>Opzione 7</item>
+    <item>Opzione 8</item>
+  </string-array>
+  <string-array name="key_map_summary">
+    <item>"In alto a sinistra -> Menu \nIn basso a sinistra -> Indietro \nIn alto a destra -> Scorri su \nIn basso a destra -> Scorri giù"</item>
+    <item>"In alto a sinistra -> Menu \nIn basso a sinistra -> Indietro \nIn alto a destra -> Scorri giù \nIn basso a destra -> Scorri su"</item>
+    <item>"In alto a sinistra -> Scorri su \nIn basso a sinistra -> Scorri giù \nIn basso a destra -> Menu \nIn basso a destra -> Indietro"</item>
+    <item>"In alto a sinistra -> Scorri giù \nIn basso a sinistra -> Scorri su \nIn basso a destra -> Menu \nIn basso a destra -> Indietro"</item>
+  </string-array>
+  <string-array name="new_key_map_summary">
+    <item>"In alto a sinistra -> Menu \nIn basso a sinistra -> Indietro \nIn basso a destra -> Scrolla su \nIn basso a destra -> Scrolla giù"</item>
+    <item>"In alto a sinistra -> Menu \nIn basso a sinistra -> Indietro \nIn alto a destra -> Scorri giù \nIn basso a destra -> Scorri su"</item>
+    <item>"In alto a sinistra -> Scorri su \nIn basso a sinistra -> Scorri giù \nIn alto a destra -> Menu \nIn basso a destra -> Indietro"</item>
+    <item>"In alto a sinistra -> Scorri giù \nIn basso a sinistra -> Scorri su \nIn alto a destra -> Menu \nIn basso a destra -> Indietro"</item>
+    <item>"In alto a sinistra -> Scorri giù \nIn basso a sinistra -> Scorri su \nIn alto a destra -> Scorri giù \nIn basso a destra -> Scorri su"</item>
+    <item>"In alto a sinistra -> Scorri su \nIn basso a sinistra -> Scorri giù \nIn alto a destra -> Scorri su \nIn basso a destra -> Scorri giù"</item>
+    <item>"In alto a sinistra -> Scorri giù \nIn basso a sinistra -> Scorri su \nIn alto a destra -> Scorri su \nIn basso a destra -> Scorri giù"</item>
+    <item>"In alto a sinistra -> Scorri su \nIn basso a sinistra -> Scorri giù \nIn alto a destra -> Scorri giù \nIn basso a destra -> Scorri su"</item>
+  </string-array>
+  <string-array name="key_map_mode_value">
+    <item>1</item>
+    <item>2</item>
+    <item>3</item>
+    <item>4</item>
+  </string-array>
+  <string-array name="new_key_map_mode_value">
+    <item>1</item>
+    <item>2</item>
+    <item>3</item>
+    <item>4</item>
+    <item>5</item>
+    <item>6</item>
+    <item>7</item>
+    <item>8</item>
   </string-array>
 </resources>
