--- a/res/layout/master_clear.xml
+++ b/res/layout/master_clear.xml
@@ -65,7 +65,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:visibility="gone"
                     android:focusable="true"
                     android:clickable="true">
                 <CheckBox android:id="@+id/erase_external"
@@ -73,8 +72,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:paddingEnd="8dp"
-                        android:focusable="false"
-                        android:clickable="false"
+                        android:focusable="true"
+                        android:clickable="true"
+                        android:checked="true"
                         android:duplicateParentState="true" />
                 <LinearLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -83,9 +83,9 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingTop="12dp"
+                        android:paddingTop="12dip"
                         android:textSize="18sp"
-                        android:text="@string/erase_external_storage" />
+                        android:text="@string/erase_internal_storage" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
