--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -922,5 +922,17 @@
         <item>3</item>
         <item>4</item>
     </string-array>
+    <string-array name="long_press_feature">
+        <item>"Option 1  "</item>
+        <item>"Option 2  "</item>
+    </string-array>
+    <string-array name="long_press_feature_summary">
+        <item>Switch front light</item>
+        <item>Switch status bar</item>
+    </string-array>
+    <string-array name="long_press_feature_value">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 
 </resources>
