--- a/res/xml/language_settings.xml
+++ b/res/xml/language_settings.xml
@@ -18,18 +18,12 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/language_keyboard_settings_title">
 
+    <PreferenceCategory android:title="@string/language_settings_category" />
+
     <PreferenceScreen
             android:fragment="com.android.settings.LocalePicker"
             android:key="phone_language"
             android:title="@string/phone_language"/>
-
-    <com.android.settings.inputmethod.SpellCheckersPreference
-            android:key="spellcheckers_settings"
-            android:title="@string/spellcheckers_settings_title"/>
-
-    <!-- User dictionary preference title and fragment will be set programmatically. -->
-    <PreferenceScreen
-            android:key="key_user_dictionary_settings" />
 
     <PreferenceCategory android:key="keyboard_settings_category"
             android:title="@string/keyboard_settings_category">
@@ -65,32 +59,6 @@
                 android:summaryOff="@string/auto_punctuate_summary"
                 android:order="1002"
                 android:persistent="false"/>
-    </PreferenceCategory>
-
-    <PreferenceCategory android:key="voice_category"
-            android:title="@string/voice_category" >
-
-        <!-- entries, entryValues, and defaultValue will be populated programmatically. -->
-        <ListPreference
-                android:key="recognizer"
-                android:title="@string/recognizer_title"
-                android:dialogTitle="@string/recognizer_title" />
-
-        <!-- An intent for this preference will be populated programmatically. -->
-        <PreferenceScreen android:key="recognizer_settings"
-                android:title="@string/recognizer_settings_title" />
-
-        <PreferenceScreen android:key="tts_settings"
-                android:fragment="com.android.settings.tts.TextToSpeechSettings"
-                android:title="@string/tts_settings_title" />
-    </PreferenceCategory>
-
-    <PreferenceCategory android:key="pointer_settings_category"
-            android:title="@string/pointer_settings_category">
-        <com.android.settings.PointerSpeedPreference
-                android:key="pointer_speed"
-                android:title="@string/pointer_speed"
-                android:dialogTitle="@string/pointer_speed" />
     </PreferenceCategory>
 
     <PreferenceCategory android:key="game_controller_settings_category"
