--- a/res/layout/wifi_dialog.xml
+++ b/res/layout/wifi_dialog.xml
@@ -15,8 +15,8 @@
 -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content">
+         android:layout_width="match_parent"
+         android:layout_height="match_parent">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -24,7 +24,9 @@
             android:orientation="vertical">
 
         <LinearLayout android:id="@+id/info"
-                style="@style/wifi_section" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
 
         <LinearLayout android:id="@+id/type"
                 style="@style/wifi_section"
@@ -150,6 +152,7 @@
 
                 <EditText android:id="@+id/password"
                         style="@style/wifi_item_content"
+                        android:textSize="18sp"
                         android:singleLine="true"
                         android:password="true" />
             </LinearLayout>
@@ -162,7 +165,8 @@
 
                 <CheckBox android:id="@+id/show_password"
                     style="@style/wifi_item_content"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
                     android:text="@string/wifi_show_password" />
             </LinearLayout>
         </LinearLayout>
@@ -172,7 +176,8 @@
                     android:visibility="gone">
             <CheckBox android:id="@+id/wifi_advanced_togglebox"
                     style="@style/wifi_item_content"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
                     android:text="@string/wifi_show_advanced" />
         </LinearLayout>
 
