--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -61,4 +61,8 @@
     <dimen name="keyguard_appwidget_picker_margin_left">6dip</dimen>
     <dimen name="keyguard_appwidget_picker_margin_right">6dip</dimen>
     <integer name="keyguard_appwidget_picker_cols">1</integer>
+
+    <dimen name="activity_horizontal_margin">12dip</dimen>
+    <dimen name="activity_vertical_margin">12dip</dimen>
+    <dimen name="setting_icon_margin">10dip</dimen>
 </resources>
