--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,6 +16,21 @@
 
 <resources>
 
+    <style name="TextAppearanceSwitch">
+        <item name="android:textSize">18dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="my_switch_style">
+        <item name="android:thumb">@drawable/switch_inner_holo_light</item>
+        <item name="android:switchTextAppearance">@style/TextAppearanceSwitch</item>
+        <item name="android:track">@drawable/switch_track_holo_light</item>
+        <item name="android:switchMinWidth">105dp</item>
+        <item name="android:switchPadding">12dp</item>
+        <item name="android:thumbTextPadding">9dp</item>
+    </style>
+
     <style name="info_label">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
