--- a/res/values-bo/arrays.xml
+++ b/res/values-bo/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- 
+<!--
 /*
 **
 ** Copyright 2007 The Android Open Source Project
@@ -38,10 +38,11 @@
     <item msgid="6864027152847611413">"30 分钟"</item>
   </string-array>
   <string-array name="shutdown_delay_entries">
-    <item>20 分钟</item>
-    <item>30 分钟</item>
-    <item>60 分钟</item>
-    <item>120 分钟</item>
+    <item>1 小时</item>
+    <item>3 小时</item>
+    <item>6 小时</item>
+    <item>12 小时</item>
+    <item>24 小时</item>
     <item>永不</item>
   </string-array>
   <string-array name="dream_timeout_entries">
