--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -30,13 +30,19 @@
     <item msgid="8392017019801393511">"Alle"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 Sekunden"</item>
     <item msgid="8881760709354815449">"30 Sekunden"</item>
     <item msgid="7589406073232279088">"1 Minute"</item>
     <item msgid="7001195990902244174">"2 Minuten"</item>
-    <item msgid="7489864775127957179">"5 Minuten"</item>
-    <item msgid="2314124409517439288">"10 Minuten"</item>
-    <item msgid="6864027152847611413">"30 Minuten"</item>
+    <item msgid="7489864775127957179">"5 Minuten"</item>
+    <item msgid="2314124409517439288">"10 Minuten"</item>
+    <item msgid="6864027152847611413">"30 Minuten"</item>
+  </string-array>
+  <string-array name="shutdown_delay_entries">
+    <item>20 Std</item>
+    <item>30 Std</item>
+    <item>60 Std</item>
+    <item>120 Std</item>
+    <item>nie</item>
   </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"Nie"</item>
@@ -53,11 +59,11 @@
     <item msgid="6736512735606834431">"5 Sekunden"</item>
     <item msgid="8044619388267891375">"15 Sekunden"</item>
     <item msgid="1822002388249545488">"30 Sekunden"</item>
-    <item msgid="8538071621211916519">"1 Minute"</item>
+    <item msgid="8538071621211916519">"1 Minute"</item>
     <item msgid="5663439580228932882">"2 Minuten"</item>
-    <item msgid="49888496216106852">"5 Minuten"</item>
-    <item msgid="9002737361305019353">"10 Minuten"</item>
-    <item msgid="4322676235684793329">"30 Minuten"</item>
+    <item msgid="49888496216106852">"5 Minuten"</item>
+    <item msgid="9002737361305019353">"10 Minuten"</item>
+    <item msgid="4322676235684793329">"30 Minuten"</item>
   </string-array>
   <string-array name="entries_font_size">
     <item msgid="8166647333858618801">"Klein"</item>
