--- a/res/values-fa/arrays.xml
+++ b/res/values-fa/arrays.xml
@@ -30,7 +30,7 @@
     <item msgid="8392017019801393511">"همه"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"۱۵ ثانیه"</item>
+    <item>۱۵ ثانیه</item>
     <item msgid="8881760709354815449">"۳۰ ثانیه"</item>
     <item msgid="7589406073232279088">"۱ دقیقه"</item>
     <item msgid="7001195990902244174">"۲ دقیقه"</item>
