--- a/res/values-hu/arrays.xml
+++ b/res/values-hu/arrays.xml
@@ -30,13 +30,19 @@
     <item msgid="8392017019801393511">"Összes"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 másodperc"</item>
     <item msgid="8881760709354815449">"30 másodperc"</item>
     <item msgid="7589406073232279088">"1 perc"</item>
     <item msgid="7001195990902244174">"2 perc"</item>
     <item msgid="7489864775127957179">"5 perc"</item>
     <item msgid="2314124409517439288">"10 perc"</item>
     <item msgid="6864027152847611413">"30 perc"</item>
+  </string-array>
+  <string-array name="shutdown_delay_entries">
+    <item>20 óra</item>
+    <item>30 óra</item>
+    <item>60 óra</item>
+    <item>120 óra</item>
+    <item>soha</item>
   </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"Soha"</item>
