--- a/res/values-nb/arrays.xml
+++ b/res/values-nb/arrays.xml
@@ -30,13 +30,19 @@
     <item msgid="8392017019801393511">"Alle"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 sekunder"</item>
     <item msgid="8881760709354815449">"30 sekunder"</item>
     <item msgid="7589406073232279088">"1 minutt"</item>
     <item msgid="7001195990902244174">"2 minutter"</item>
     <item msgid="7489864775127957179">"5 minutter"</item>
     <item msgid="2314124409517439288">"10 minutter"</item>
     <item msgid="6864027152847611413">"30 minutter"</item>
+  </string-array>
+  <string-array name="shutdown_delay_entries">
+    <item>20 timer</item>
+    <item>30 timer</item>
+    <item>60 timer</item>
+    <item>120 timer</item>
+    <item>Aldri</item>
   </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"Aldri"</item>
