--- a/res/values-nl/arrays.xml
+++ b/res/values-nl/arrays.xml
@@ -30,13 +30,19 @@
     <item msgid="8392017019801393511">"Alles"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 seconden"</item>
     <item msgid="8881760709354815449">"30 seconden"</item>
     <item msgid="7589406073232279088">"1 minuut"</item>
     <item msgid="7001195990902244174">"2 minuten"</item>
     <item msgid="7489864775127957179">"5 minuten"</item>
     <item msgid="2314124409517439288">"10 minuten"</item>
     <item msgid="6864027152847611413">"30 minuten"</item>
+  </string-array>
+  <string-array name="shutdown_delay_entries">
+    <item>20 uur</item>
+    <item>30 uur</item>
+    <item>60 uur</item>
+    <item>120 uur</item>
+    <item>nooit</item>
   </string-array>
   <string-array name="dream_timeout_entries">
     <item msgid="3149294732238283185">"Nooit"</item>
